# tensorlake

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Cargo.toml  IMAGEBUILDER_V2_V3_COEXISTENCE.md  LICENSE  Makefile  README.md  code-of-conduct.md  contributing.md  example.py  justfile  my_test.py  new_ux.py  openapi.yaml  pyproject.toml  reference_graph.py  scripts.py  test_graph.py  test_parameter_extraction.py
.github/: pull_request_template.md
.github/scripts/: bump_version.py  bundle_cloud_sdk_wheel.py  verify_wheel.py
.github/workflows/: document_ai.yaml  integration_test.yaml  publish_cli.yaml  publish_crates_io.yaml  publish_npm.yaml  publish_pypi.yaml  publish_test_pypi.yaml  sandbox_local_tests.yaml  tests.yaml  typescript_sdk.yaml
crates/: VENDORED_FROM
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: cache.rs  error.rs  http.rs  main.rs  tensorlake.rs
crates/cli/src/auth/: context.rs  guard.rs  login.rs  mod.rs
crates/cli/src/commands/: applications.rs  build_images.rs  cron.rs  deploy.rs  filesystem.rs  fs.rs  git.rs  init.rs  login.rs  mod.rs  new.rs  parse.rs  secrets.rs  shared_fs.rs  ssh_keys.rs  whoami.rs
crates/cli/src/commands/fs/: daemon.rs  fusefs.rs  generation_capture.rs  local.rs  local_state.rs  overlay.rs  plaindir.rs  recovery_model_tests.rs  vfsserver.rs
crates/cli/src/commands/git/: fastclone.rs  setup.rs
crates/cli/src/commands/sbx/: clone.rs  copy.rs  cp.rs  create.rs  create_sandbox_image.rs  create_template.rs  describe.rs  exec.rs  filesystem.rs  fs.rs  ls.rs  mod.rs  name.rs  native_ssh.rs  port.rs  process.rs  pty.rs  resume.rs  run.rs  shared_fs.rs  snapshot.rs  snapshot_ls.rs  snapshot_rm.rs  ssh.rs  stop.rs  suspend.rs  terminate.rs  tunnel.rs
crates/cli/src/commands/sbx/image/: create.rs  describe.rs  import.rs  ls.rs  mod.rs  register.rs  rm.rs
crates/cli/src/commands/sbx/pool/: claim.rs  create.rs  get.rs  ls.rs  mod.rs  rm.rs  update.rs
crates/cli/src/config/: files.rs  mod.rs  resolver.rs
crates/cli/src/output/: mod.rs  spinner.rs  table.rs
crates/cli/src/project/: detection.rs  mod.rs  templates.rs
crates/cli/src/python_ast/: image_extractor.rs  local_import_resolver.rs  mod.rs
crates/cli/tests/fixtures/: multi_image.py  no_images.py  single_image.py  syntax_error.py
crates/cli/tests/fixtures/multi_file_app/: app.py
crates/cli/tests/fixtures/multi_file_app/images/: __init__.py  worker.py
crates/cloud-sdk/: Cargo.toml
crates/cloud-sdk/examples/: native_target_benchmark.rs
crates/cloud-sdk/src/: client.rs  error.rs  lib.rs  sandbox_images.rs  test_support.rs
crates/cloud-sdk/src/applications/: error.rs  mod.rs  models.rs
crates/cloud-sdk/src/artifact_storage/: fastclone.rs  ingest.rs  merge.rs  mod.rs  models.rs  native_fs.rs  workspaces.rs
crates/cloud-sdk/src/cron/: mod.rs  models.rs
crates/cloud-sdk/src/document_ai/: mod.rs
crates/cloud-sdk/src/file_systems/: mod.rs  models.rs
crates/cloud-sdk/src/filesystems/: mod.rs  models.rs
crates/cloud-sdk/src/images/: error.rs  mod.rs  models.rs
crates/cloud-sdk/src/sandbox_templates/: mod.rs  models.rs
crates/cloud-sdk/src/sandboxes/: desktop.rs  mod.rs  models.rs
crates/cloud-sdk/src/secrets/: error.rs  mod.rs  models.rs
crates/cloud-sdk/src/shared_file_systems/: mod.rs  models.rs
crates/cloud-sdk/tests/: applications.rs  common.rs  images.rs  repositories.rs  sandbox_templates.rs  sandboxes.rs  secrets.rs
crates/gsvc-codec/: Cargo.toml
crates/gsvc-codec/src/: async_stream.rs  bitmap.rs  chunkloc.rs  commitgraph.rs  delta.rs  error.rs  graph.rs  idx.rs  latency.rs  lib.rs  object.rs  oid.rs  pack.rs
crates/gsvc-codec/tests/: git_interop.rs
crates/gsvc-fs-client/: Cargo.toml  build.rs
crates/gsvc-fs-client/src/: lib.rs
crates/gsvc-mount/: Cargo.toml
crates/gsvc-mount/src/: cache.rs  client.rs  core.rs  lib.rs  watch.rs
crates/rust-cloud-sdk-node/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/rust-cloud-sdk-node/src/: lib.rs  repositories.rs  sandbox.rs
crates/rust-cloud-sdk-py/: Cargo.toml  pyproject.toml
crates/rust-cloud-sdk-py/src/: lib.rs
docs/: git-mount.md  local-snapshot-state.md  sandbox-pools-cli-reference.md  sandbox-pools-plan.md
examples/: ACORD_Forms_Extraction_Example.ipynb  Detect_Signatures.ipynb  Langchain_Tensorlake_Tool_Demo.ipynb  Resume_Parsing_Example.ipynb  Smart_Document_Agent_OpenAI_SDK (1).ipynb  Tensorlake_Qdrant_LangGraph.ipynb  agno_agent.py  async_pty.py  datasets.py  duckdb_dataset.py  parse_documents_folder.py  parse_documents_folder_async.py  quickstart.py  readme_documentai.py  readme_example.py  readme_structured_extraction.py  signature_detection_agent.py  structured_extraction_example.py  test_file_upload.py  webhook.py
examples/github-rag/: README.md  main.py  pyproject.toml
examples/readme_example/: city_guide.py  city_guide_with_durable_llm.py  customer_support_example.py  remote_city_guide_with_durable_llm.py  test_remote_app.py
examples/smoke/: Dockerfile.smoke  README.md  cli_image_build.sh  python_named_reconnect.py  ts_create_and_connect.mjs
reference_app/: reference_app.py
scripts/: test_build_e2e.py
src/tensorlake/: __init__.py  _tracing.py  cli.py  cloud_client.py  error.py  http_client.py  public_endpoint.py  remote_graph.py  repositories.py  settings.py  user_error.py
tensorlake/: __init__.py  cli.py  http_client.py  remote_pipeline.py
tensorlake.data/scripts/: function-executor  tensorlake-build-images  tensorlake-create-sandbox-image  tensorlake-create-template  tensorlake-deploy  tensorlake-parse
tensorlake/builder/: client.py
tensorlake/functions_sdk/: data_objects.py  (+8 more)
tests/: .gitignore  README.md  compose.yaml  pyproject.toml  run_tests.sh  test_broken_graphs.py  test_cloud_client.py  test_data_loader.py  test_file_descriptor_caching.py  test_function_wrapper.py  test_graph_behaviours.py  test_graph_update.py  test_graph_validation.py  test_repositories.py
typescript/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
(+823 files in other folders)
