[workspace]
members = ["crates/cloud-sdk", "crates/cli", "crates/rust-cloud-sdk-py"]
resolver = "3"

[workspace.package]
version = "0.4.18"
authors = ["Tensorlake Inc. <support@tensorlake.ai>"]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates
tensorlake-cloud-sdk = { path = "crates/cloud-sdk" }

# Async runtime
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time", "process", "io-std", "io-util", "signal"] }
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
futures = "0.3.32"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1"
serde_with = { version = "3.17", default-features = false, features = ["base64", "std", "macros"] }
serde_path_to_error = "0.1.20"

# HTTP
reqwest = { version = "0.13.2", default-features = false, features = ["json", "multipart", "rustls-no-provider", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
eventsource-stream = "0.2"
reqwest-middleware = { version = "0.5.1", features = ["json", "multipart", "query"] }
url = "2.5.8"
urlencoding = "2.1"

# Crypto & encoding
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Docker
bollard = "0.20"
docker-credentials-config = "0.1.0"
http-body-util = "0.1"

# Templating
minijinja = "2"

# Data types
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.21.0", features = ["serde"] }

# Utilities
thiserror = "2.0.18"
anyhow = "1.0.102"
derive_builder = "0.20"
pin-project-lite = "0.2.17"

# Compression & archives
flate2 = "1.1.9"
tar = "0.4"

# OpenAPI
utoipa = { version = "5.4.0", features = ["chrono"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
toml = "0.9.8"
dirs = "6"
comfy-table = "7"
indicatif = "0.18.4"
console = "0.16.2"
dialoguer = "0.12"
open = "5"
crossterm = "0.29"

# Python bindings
pyo3 = { version = "0.22", features = ["abi3-py310", "extension-module"] }

[profile.release]
codegen-units = 1
strip = true
lto = true
