[workspace]
members = [
    "crates/cloud-sdk",
    "crates/cli",
    "crates/rust-cloud-sdk-node",
    "crates/rust-cloud-sdk-py",
]
# gsvc-mount is a resolution-only placeholder for the private mount core (see its Cargo.toml and
# the workspace.dependencies note below). Excluded so `cargo build --workspace` never compiles the
# placeholder; it is only ever built when `tensorlake-cli --features mount` activates it, at which
# point official builds swap in the real crate via a Cargo `paths` override.
exclude = ["crates/gsvc-mount", "crates/gsvc-codec"]
resolver = "3"

[workspace.package]
version = "0.5.67"
authors = ["Tensorlake Inc. <support@tensorlake.ai>"]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
fastcdc = "3"

# Internal crates
tensorlake = { path = "crates/cloud-sdk" }
# Resolution-only placeholder for the private gsvc-codec packfile codec (backs `tl git clone`).
# The real source is no longer vendored here: official builds swap it in ephemerally — see
# crates/VENDORED_FROM and the `build-cli-full` justfile recipe / vendor-private-crates CI action.
gsvc-codec = { path = "crates/gsvc-codec" }
# Private mount core for `tl fs mount`. The source is NOT vendored into this public tree; the
# `crates/gsvc-mount` here is a resolution-only placeholder (a `compile_error!` stub) so the public
# repo builds with no access to the private artifact_storage repo. It is consumed only by
# `tensorlake-cli` behind the optional `mount` feature, so default builds never compile it.
# Official release binaries are built with `--features mount` and a Cargo `paths` override that
# points this crate at the real gsvc-mount in a sibling artifact_storage checkout (see the
# `build-cli-full` recipe in the justfile). Keep the placeholder's name/version in sync with the
# real crate so the override matches.
gsvc-mount = { path = "crates/gsvc-mount" }

# Async runtime
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time", "process", "io-std", "io-util", "signal"] }
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
futures = "0.3.32"
des = "0.8"
png = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1"
serde_with = { version = "3.17", default-features = false, features = ["base64", "std", "macros"] }
serde_path_to_error = "0.1.20"

# HTTP
reqwest = { version = "0.13.2", default-features = false, features = ["json", "multipart", "rustls-no-provider", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
eventsource-stream = "0.2"
reqwest-middleware = { version = "0.5.1", features = ["json", "multipart", "query"] }
url = "2.5.8"
urlencoding = "2.1"

# Crypto & encoding
sha1 = "0.11"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
shlex = "1.3"
crc32fast = "1"

# Docker
bollard = "0.20"
docker-credentials-config = "0.1.0"
http = "1"
http-body-util = "0.1"

# Templating
minijinja = "2"

# Data types
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
rand = "0.9.2"
uuid = { version = "1.22.0", features = ["serde", "v4"] }

# Utilities
thiserror = "2.0.18"
anyhow = "1.0.102"
derive_builder = "0.20"
pin-project-lite = "0.2.17"
ignore = "0.4"
parking_lot = "0.12"
rayon = "1"
tempfile = "3"
tracing = "0.1"

# Compression & archives
# zlib-rs matches artifact_storage's flate2 feature choice, which the (ephemerally vendored)
# gsvc-codec is tested against; the default miniz_oxide backend has produced a divergent test result.
flate2 = { version = "1.1.9", features = ["zlib-rs"] }
tar = "0.4"

# OpenAPI
utoipa = { version = "5.4.0", features = ["chrono"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
toml = "0.9.8"
dirs = "6"
comfy-table = "7"
indicatif = "0.18.4"
console = "0.16.2"
dialoguer = "0.12"
open = "5"
crossterm = "0.29"
gethostname = "0.5"
env-file-reader = "0.3.0"

# Python bindings
pyo3 = { version = "0.28.2", features = ["abi3-py310", "extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }

# Node.js bindings (napi-rs)
napi = { version = "2", default-features = false, features = ["napi6", "async", "tokio_rt", "serde-json"] }
napi-derive = "2"
napi-build = "2"

[profile.release]
codegen-units = 1
strip = true
lto = true
