[project]
name = "tensorlake"
version = "0.4.13"
description = "Tensorlake SDK for Document Ingestion API and Serverless Applications"
readme = "README.md"
authors = [{ name = "Tensorlake Inc.", email = "support@tensorlake.ai" }]
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.27.2,<1.0",
    "pydantic>=2.0,<3.0",
    "httpx-sse>=0.4.1",
    "grpcio>=1.40.0,<2.0.0",
    "grpcio-tools>=1.40.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/tensorlakeai/tensorlake"
Repository = "https://github.com/tensorlakeai/tensorlake"

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/cli/Cargo.toml"
module-name = "tensorlake"
python-source = "src"
data = "tensorlake.data"
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "src/tensorlake/_cloud_sdk*.so", format = "wheel" },
]

[tool.black]
extend_exclude = "vendor"

[tool.isort]
profile = "black"
extend_skip = ["vendor"]

[tool.poetry.group.dev.dependencies]
black = "25.11.0"
parameterized = "^0.9.0"
respx = "^0.22.0"
psutil = "^7.2.2"
isort = "^7.0.0"
pre-commit = "^4.5.1"
# grpcio is forward compatible within the major version, so stubs generated
# with any 1.x version work with all 1.x runtimes (including the minimum
# required by users: >=1.40.0). Pin to a recent release to ensure Python 3.14
# wheels are available (old versions required building from source).
grpcio = "^1.68.0"
grpcio-tools = "^1.68.0"
setuptools = "^69.0.0"
maturin = ">=1.9,<2.0"
