[package]
name = "tensorlake-cli"
version.workspace = true
edition = "2024"
license = "Apache-2.0"
description = "TensorLake CLI"

[[bin]]
name = "tl"
path = "src/main.rs"

[[bin]]
name = "tensorlake"
path = "src/tensorlake.rs"

[dependencies]
tensorlake = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eventsource-stream = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
open = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
crossterm = { workspace = true }
gethostname = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
futures = { workspace = true }
bollard = { workspace = true }
docker-credentials-config = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
minijinja = { workspace = true }
env-file-reader = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
shlex = { workspace = true }
rustpython-parser = "0.3"
gsvc-codec = { workspace = true }
gsvc-mount = { workspace = true }
flate2 = { workspace = true }
sha1 = { workspace = true }

[dev-dependencies]
tempfile = "3"

# FUSE: pure-Rust /dev/fuse on Linux (always on — sandboxes are the primary mount target);
# macOS requires macFUSE at build time, so the binding is feature-gated there.
[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.15", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
fuser = { version = "0.15", optional = true }

[features]
macfuse = ["dep:fuser"]
