[package]
name = "tensorlake-cli"
version.workspace = true
edition = "2024"
license = "Apache-2.0"
description = "TensorLake CLI"

[features]
default = []
# `tl fs mount`: the local FUSE/overlay mount stack, backed by the private gsvc-mount core.
# Off by default so this public crate builds with no access to the artifact_storage repo — with the
# feature off, gsvc-mount (a resolution-only placeholder in crates/gsvc-mount) is never compiled.
# Do NOT build with `--features mount` directly against the placeholder; use `just build-cli-full`,
# which swaps in the real mount core from a sibling artifact_storage checkout (see that recipe and
# crates/VENDORED_FROM).
mount = ["dep:gsvc-mount", "dep:libc", "dep:fuser"]
# `tl git clone`: the fast-clone engine, backed by the private gsvc-codec packfile codec. Same
# placeholder + ephemeral-vendor arrangement as `mount` (see crates/VENDORED_FROM): off by
# default so this public crate builds with no access to the artifact_storage repo. Official
# binaries enable it via `just build-cli-full` locally or the vendor-private-crates CI action.
# Lives here — not in the published `tensorlake` SDK crate — because crates.io rejects a
# manifest whose dependency (gsvc-codec) can never be published.
git-clone = ["dep:gsvc-codec"]

[[bin]]
name = "tl"
path = "src/main.rs"

[[bin]]
name = "tensorlake"
path = "src/tensorlake.rs"

[dependencies]
tensorlake = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eventsource-stream = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
open = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
crossterm = { workspace = true }
gethostname = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
futures = { workspace = true }
bollard = { workspace = true }
docker-credentials-config = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
minijinja = { workspace = true }
env-file-reader = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
shlex = { workspace = true }
rustpython-parser = "0.3"
gsvc-codec = { workspace = true, optional = true }
gsvc-mount = { workspace = true, optional = true }
libc = { version = "0.2", optional = true }
tracing = { workspace = true }
flate2 = { workspace = true }
sha1 = { workspace = true }
ignore = { workspace = true }

[dev-dependencies]
tempfile = "3"

# FUSE: pure-Rust /dev/fuse on Linux (always on — sandboxes are the primary mount target).
# macOS mounts go through an FSKit extension (no kernel extension), not FUSE.
[target.'cfg(target_os = "linux")'.dependencies]
# abi-7-12 gates the kernel notify channel (Notifier::inval_entry/inval_inode) that the
# mount daemon pushes refresh deltas through; FUSE 7.12 is Linux 2.6.29-era, universally safe.
fuser = { version = "0.15", default-features = false, features = ["abi-7-12"], optional = true }
