[package]
name = "tensorlake"
version.workspace = true
authors = ["support@tensorlake.ai"]
description = "A Rust SDK for interacting with Tensorlake Cloud APIs."
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/tensorlakeai/tensorlake"
homepage = "https://tensorlake.ai"
documentation = "https://docs.rs/tensorlake"

[dependencies]
anyhow = { workspace = true }
fastcdc = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
docker-credentials-config = { workspace = true }
utoipa = { workspace = true, optional = true }
derive_builder = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
ignore = { workspace = true }
pin-project-lite = { workspace = true }
png = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
eventsource-stream = { workspace = true }
reqwest-middleware = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
shlex = { workspace = true }
tar = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
des = { workspace = true }
rand = "0.9.2"
# Chunk-pack assembly for presigned-PUT staging (matches the server's chunk frame encoding).
zstd = "0.13"

[dev-dependencies]
data-encoding = "2.5"
tokio = { workspace = true, features = ["test-util"] }
zip = "0.6"

[lints.clippy]
too_many_arguments = "allow"

[features]
integration-tests = []
openapi = ["utoipa"]
