[package]
name = "gsvc-mount"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VFS-agnostic mount core for artifact-storage repos: native-API client, immutable caches, branch-refresh state machine. FUSE (or other) bindings live in the client distribution, not here."

[dependencies]
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
