[package]
name = "tensorlake-rust-cloud-sdk-py"
version.workspace = true
edition = "2024"
license = "Apache-2.0"
description = "PyO3 bindings for Tensorlake Rust cloud client"

[lib]
name = "_cloud_sdk"
crate-type = ["cdylib"]

[dependencies]
tensorlake = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
urlencoding = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.28.3"
