[project]
name = "github-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "github3-py>=4.0.1",
    "lancedb>=0.17.0",
    "openai>=2.2.0",
    "polars>=1.34.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tensorlake>=0.2.55",
    "tiktoken>=0.12.0",
]
